# cignals

./: .clang-format  CMakeLists.txt  README.md
completions/: cignals.bash
src/: daemon.c  daemon.h  main.c
tools/: format.sh
